EDRN JIRA site: http://oodt.jpl.nasa.gov/jira/browse/CA


Release Notes - Early Detection of Cancer - Version Portal 4.5.8 - 2016.09.16 - NCI OPERATIONS

** Bug
    * [CA-1400] - Minimal portal cannot ingest minimal publications
    * [CA-1401] - ez_setup.py moved; cannot deploy portal


Release Notes - Early Detection of Cancer - Version Portal 4.5.7

** Bug
    * [CA-1341] - edrn.theme uses obsolete unittest2 package
    * [CA-1349] - Summary ingest should be robust in the face of failures


Release Notes - Early Detection of Cancer - Version Portal 4.5.6 - 2015-02-19 - NCI OPERATIONS

** Bug
    * [CA-1322] - Resources Tab displaying as Organ in BMDB
    * [CA-1324] - Minimal portal cannot ingest minimal biomarkers


Release Notes - Early Detection of Cancer - Version Portal 4.5.5 - 2016-02-02

** Bug
    * [CA-1312] - Remove "EDRN Account Name" from people on public portal
    * [CA-1316] - Protocol data possibly missing in portal
    * [CA-1317] - Ziding Feng missing some content
    * [CA-1319] - Lung Collaborative Group link not working

** New Feature
    * [CA-1321] - Add Biomuta display to biomarkers


Release Notes - Early Detection of Cancer - Version Portal 4.5.4 - 2015-03-10 - NCI OPERATIONS

** Bug
    * [CA-1291] - Member Directory showing an error
    * [CA-1292] - Bug in portal ingest
    * [CA-1293] - Cannot edit protocol
    * [CA-1299] - Trace stack error when trying to edit Boston Site - 193
    * [CA-1300] - Trace stack error when trying to edit Arizona State - 230
    * [CA-1302] - eke.study integration tests failing
    * [CA-1303] - eke.biomarker integration tests failing


Release Notes - Early Detection of Cancer - Version Portal 4.5.3 - 2015-01-28

** Improvement
    * [CA-759] - Improve Publication Layout


Release Notes - Early Detection of Cancer - Version Portal 4.5.2 - 2015-01-06

** Bug
    * [CA-1295] - Infinite loop in functional test, but only on some platforms
