@@ -1,6 +1,14 @@
 EDRN JIRA site: http://oodt.jpl.nasa.gov/jira/browse/CA
 
 
+Release Notes - Early Detection of Cancer - Version Portal 4.6.0 - 2016.09.23 - NCI OPERATIONS
+
+** Bug
+    * [CA-1410] - Summary url not being set using set-rdf-sources.py
+    * [CA-1350] - Help text on PublicationsFolder fields is confusing
+    * [CA-1348] - Summary source URLs should be marked as required
+
+
 Release Notes - Early Detection of Cancer - Version Portal 4.5.8 - 2016.09.16 - NCI OPERATIONS
 
 ** Bug
